--- a/src/engine/test/source/base/CMakeLists.txt
+++ b/src/engine/test/source/base/CMakeLists.txt
@@ -4,7 +4,7 @@ set(SHARED_ENGINE_SOURCE_DIR ${ENGINE_SOURCE_DIR}/base/utils)
 # Builder targets
 ####################################################################################################
 # Builder test
-include_directories(utils/tests/)
+include_directories(${TEST_SOURCE_DIR}/common)
 
 add_executable(stringUtils_test
   stringUtils_test.cpp
