--- a/src/engine/source/base/CMakeLists.txt
+++ b/src/engine/source/base/CMakeLists.txt
@@ -46,14 +46,15 @@ CPMAddPackage(
     NAME fmt
     GITHUB_REPOSITORY fmtlib/fmt
     GIT_TAG "8.1.1"
-    )
+    OPTIONS "FMT_HEADER_ONLY ON"
+)
 
 CPMAddPackage(
     NAME spdlog
     GITHUB_REPOSITORY gabime/spdlog
     GIT_TAG "v1.11.0"
     OPTIONS "SPDLOG_FMT_EXTERNAL_HO ON"
-    )
+)
 
 ####################################################################################################
 # json
