--- a/src/engine/test/source/kvdb/CMakeLists.txt
+++ b/src/engine/test/source/kvdb/CMakeLists.txt
@@ -4,7 +4,7 @@ add_executable(kvdb_test
 
 target_include_directories(kvdb_test
   PRIVATE
-  ${TEST_SOURCE_DIR}/base/utils/tests
+  ${TEST_SOURCE_DIR}/common
 )
 
 target_link_libraries(kvdb_test gtest_main kvdb base)
