Implement and adds new server to the start command

--- a/src/engine/source/queue/CMakeLists.txt
+++ b/src/engine/source/queue/CMakeLists.txt
@@ -16,3 +16,8 @@ target_include_directories(queue
   ${CMAKE_CURRENT_SOURCE_DIR}/include
   ${CameronQueue_SOURCE_DIR}
 )
+
+target_link_libraries(queue
+  PUBLIC
+  base # Only for the loggin
+)
