--- a/src/engine/ruleset/decoders/azure/azure-AuditLogs.yml
+++ b/src/engine/ruleset/decoders/azure/azure-AuditLogs.yml
@@ -1,8 +1,8 @@
 
-name: decoder/azure_AuditLogs/0
+name: decoder/azure-AuditLogs/0
 
-sources: 
-  - decoder/azure_base_decoder/0
+sources:
+  - decoder/azure-decoder/0
 
 metadata:
   description: AuditLog decoder for Azure events
@@ -48,6 +48,6 @@ normalize:
     - ~json.CallerIpAddress: "[<source.ip>]:<source.port>"
     - ~json.CallerIpAddress: <source.ip>
 
-  - map:  
+  - map:
     - client.ip: $source.ip
     - related.ip: $source.ip
